# textual-app

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  CONTEXT.md  README.md  api_out.txt  environment.yml  pyproject.toml
api/: openapi.yaml
docs/: refactoring-plan.md  textual-rules.md
docs/adr/: 0001-parameterised-child-screens-bypass-router.md  0002-reruns-create-new-run.md
docs/architecture-review-20260524/: index.html  plan.md
scripts/: migrate_feature_screen.py  regen-client.sh
src/your_cli/: __init__.py  __main__.py  cli.py  config.py
src/your_cli/client/: README.md
src/your_cli/tui/: app.py  fake_api.py  feature_screen.py  models.py  paginator.py  palette.py  repository.py  router.py  routes.py  styles.tcss  themes.py
src/your_cli/tui/screens/: dashboard.py  demo_api_files.py  demo_autocomplete.py  demo_cards.py  demo_cards2.py  demo_command_palette.py  demo_content_switcher.py  demo_context_menu.py  demo_custom_widget.py  demo_data.py  demo_dicom_nrrd.py  demo_files.py  demo_form_table.py  demo_form_validation.py  demo_help_keys.py  demo_inline_edit.py  demo_inputs.py  demo_label_form.py  demo_layout.py  demo_link.py  demo_live_dashboard.py  demo_log.py  demo_log_stream.py  demo_masked_input.py  demo_master_detail.py  demo_master_detail_vertical.py  demo_multiselect.py  demo_notification_drawer.py  demo_option_list.py  demo_pagination.py  demo_pretty.py  demo_progress.py  demo_report.py  demo_rule.py  demo_search_filter.py  demo_search_grid.py  demo_selection_list.py  demo_settings.py  demo_tabs.py  demo_theme.py  (+6 more)
src/your_cli/tui/widgets/: __init__.py  (+4 more)
(+126 files in other folders)
